# OOD

./: .gitignore  README.md
1-lab/4-lab/include/: CCircle.h  CLineSegment.h  CPoint.h  CRectangle.h  CTriangle.h  IShape.h  ISolidShape.h  ShapeParser.h
1-lab/4-lab/src/: CCircle.cpp  CLineSegment.cpp  CRectangle.cpp  CTriangle.cpp  ShapeParser.cpp
1-lab/4-lab/tests/: test.cpp
1-lab/shapes/: CMakeLists.txt  shapes.txt
1-lab/shapes/include/: CPoint.h  CircleAdapter.h  ConvexAdapter.h  Group.h  ICanvas.h  IGroup.h  IShape.h  IShapeStrategy.h  Picture.h  PictureService.h  RectD.h  RectangleAdapter.h  SelectionManager.h  ShapeController.h  ShapeFactory.h  ShapesController.h
1-lab/shapes/src/: CPoint.cpp  CircleAdapter.cpp  ConvexAdapter.cpp  Group.cpp  Picture.cpp  PictureService.cpp  RectangleAdapter.cpp  SelectionManager.cpp  ShapeController.cpp  ShapeFactory.cpp  ShapesController.cpp  main.cpp
1-lab/shapes/tests/: IGroup.h  test.cpp
1-lab/strategy/: CMakeLists.txt
1-lab/strategy/SimUDuck/: SimUDuck.cpp
1-lab/strategy/SimUDuck/fp-strategy/: main.cpp
1-lab/strategy/SimUDuck/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
1-lab/strategy/SimUDuck/lib/Duck/Dance/: DanceMinuet.h  DanceNoWay.h  DanceWaltz.h  IDanceBehavior.h
1-lab/strategy/SimUDuck/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
1-lab/strategy/SimUDuck/tests/: MockDanceBehavior.h  MockFlyBehavior.h  MockQuackBehavior.h  test.cpp
1-lab/strategy/ducks/: ducks.cpp
